# bot-srapper

./: README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  alembic.ini  fsm.py  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: a82dae860362_create_users_requests_table.py
app/core/: __init__.py  log_handler.py  settings.py
app/core/dtos/: __init__.py  user_request_dto.py
app/core/models/: __init__.py  base.py  db_helper.py  user_request.py
app/repositories/: __init__.py  base_repository.py  user_request_repository.py
app/routers/: __init__.py  support_router.py  unknown_command_router.py  wikipedia_router.py
app/services/: __init__.py  database_service.py  scraper.py  wikipedia_service.py
